# notes

auth/: Cargo.toml
auth/src/: lib.rs  procedure.rs
draft/: .env  Cargo.toml  user.db
draft/src/: main.rs  model.rs  private.pem  public.pem
dt_app/: package.json  simple.html
dt_app/src/: App.svelte
dt_app/src-tauri/: Cargo.toml  tauri.conf.json
dt_app/src-tauri/src/: main.rs
note_api/: .env  Cargo.toml  user.db
note_api/src/: app.rs  config.rs  error.rs  main.rs  private.pem  public.pem
note_api/src/models/: mod.rs  notes.rs  users.rs
note_api/src/repos/: biz_db.rs  mod.rs  user_db.rs
note_api/src/routes/: account_route.rs  auth_route.rs  file_route.rs  mod.rs  note.rs  note_route.rs  user.rs
note_api/src/utils/: auth.rs  common.rs  gaurd.rs  mod.rs
note_api/static/: index.html
test/: base.http
web_app/: package.json
web_ui/: index.html  logic.drawio  package.json
web_ui/src/: App.svelte  app.postcss  main.js  routes.js
web_ui/src/funcs/: authenticate.js
web_ui/src/lib/: Wang.svelte
web_ui/src/lib/editor/: Bubble.svelte  Editor.svelte  EditorWithTipTap.svelte  Float.svelte  FloatToolBar.svelte  Node.svelte  NodeTree.svelte  PEditor.svelte  Toolbar.svelte  editor.js  editorStore.js
web_ui/src/lib/nav/: auth.svelte  funBtns.svelte
web_ui/src/lib/notes/: note.svelte  noteStore.js  sNote.svelte
web_ui/src/lib/tables/: Pagination.svelte  TablePanel.svelte  TableRow.svelte
web_ui/src/pages/: index.svelte
web_ui/src/pages/auth/: login.svelte  register.svelte
web_ui/src/pages/board/: board.svelte
web_ui/src/pages/db/: db.svelte
web_ui/src/pages/layouts/: TopLayout.svelte  UserLayout.svelte
web_ui/src/pages/tables/: table.svelte
web_ui/src/stores/: userStore.js
