[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.188",features = ["derive"]}
serde_json = "1.0.107"
tokio = {version = "1.32.0",features = ["full"]}
validator={version="0.16.1",features = ["derive"]}
uuid={version = "1.5.0",features = ["v4","serde"]}
argon2="0.5.2"
sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls", "sqlite", "chrono", "rust_decimal", "macros" ] }
chrono= {version="0.4.24",features= ["serde"] }
jwt-simple = "0.11.7"