[package]
name = "draft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validator={version="0.16.1",features = ["derive"]}
uuid={version = "1.5.0",features = ["v4","serde"]}
dotenv="0.15.0"
argon2="0.5.2"
axum = {version = "0.6.20",features = ["ws","headers","multipart"]}
axum-trace-id = "0.1.0"
serde = {version="1.0.188",features = ["derive"]}
serde_json = "1.0.107"
tokio = {version = "1.32.0",features = ["full"]}
tower = {version = "0.4.13",features = ["util","timeout"]}
tower-http = {version = "0.4.4",features = ["fs","trace","propagate-header","cors"]}
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = {version = "0.3.17",features = ["env-filter","fmt"]}
sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls", "sqlite", "chrono", "rust_decimal", "macros" ] }
chrono= {version="0.4.24",features= ["serde"] }
jsonwebtoken={version = "9.1.0"}