[package]
name = "note_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20",features = ["ws"]}
axum-trace-id = "0.1.0"
serde = {version="1.0.188",features = ["derive"]}
serde_json = "1.0.107"
tokio = {version = "1.32.0",features = ["full"]}
tower = {version = "0.4.13",features = ["util","timeout"]}
tower-http = {version = "0.4.4",features = ["fs","trace","propagate-header","cors"]}
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = {version = "0.3.17",features = ["env-filter","fmt"]}
sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls", "sqlite", "chrono", "rust_decimal", "macros" ] }
chrono= {version="0.4.24",features= ["serde"] }

[profile.release]
panic = 'abort'
